src/components/DownloadLoginFile.css
.download-loginfile {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    outline: none;
    flex-grow: 1;
}

.download-loginfile .loginfile {
    height: 40rem;
    margin: auto;
}

.download-loginfile .long-touch-indicator {
    width: 11rem;
    height: 11rem;
    position: absolute;
    left: calc(50% - 5.5rem);
    top: 25.5rem; /* To lie over the wallet indicator on the Login File*/
    pointer-events: none;
    display: none;
    stroke: white;
}

.download-loginfile .long-touch-indicator.animate {
    /* The animation duration is not 800ms like the LONG_TOUCH_DURATION,
       because testing revealed that then the indicator does not fill
       up completely. With 700ms it fills up completely when the
       pop-up menu is shown. */
    animation: long-touch-indicator-animation 700ms linear forwards;
}

@keyframes long-touch-indicator-animation {
    from {
        stroke-dashoffset: 100.5;
        stroke: rgba(255, 255, 255, 0.6);
    }
}

.download-loginfile button,
.download-loginfile .download-button {
    margin-top: 4rem;
    margin-bottom: 1rem;
}

.download-loginfile .download-button {
    line-height: 7.5rem;
}

.download-loginfile .tap-and-hold,
.download-loginfile .continue,
.download-loginfile.fallback-download .download-button,
.download-loginfile.maybe-downloaded .download-button {
    display: none;
}

.download-loginfile.fallback-download .tap-and-hold,
.download-loginfile.maybe-downloaded .continue {
    display: block;
}

.download-loginfile.maybe-downloaded .tap-and-hold {
    display: none; /* needs to come _after_ "display: block" above to overwrite it */
}

.download-loginfile .nq-label {
    text-align: center;
    margin: 6rem 0 2rem;
    font-size: 2rem;
    line-height: 1.25;
    color: rgba(31, 35, 72, .5) !important; /* important is necessary for iOS to overwrite <a> colors; based on Nimiq Blue */
}

